--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>Raychat - Task</title>
     <link rel="stylesheet" href="./assets/style/style.css" />
   </head>
-  <body>
+  <body id="app-body" data-theme="light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
